# aglet

./: .gitignore  .rustfmt.toml  Cargo.toml  tarpaulin-report.html
aglet/: Cargo.toml  test.regex
aglet-derive/: Cargo.toml
aglet-derive/src/: borrow_key.rs  default_with_span.rs  lib.rs
aglet-generate/: Cargo.toml
aglet-generate/src/: main.rs  parse.rs  task.rs
aglet-generate/src/cache/: cache.rs  cached_value.rs  hash_files.rs  metadata.rs  mod.rs  phase.rs  stored_version.rs
aglet-generate/src/cmd/: mod.rs
aglet-generate/src/cmd/unicode/: fetch.rs  generate.rs  list.rs  mod.rs  show.rs  use_version.rs
aglet-generate/src/ftp/: listing.rs  mod.rs  pool.rs  remote_version.rs
aglet-generate/src/ftp/download/: download.rs  mod.rs  options.rs  progress.rs
aglet-generate/src/ftp/list_files/: entry.rs  list_files.rs  mod.rs  options.rs  progress.rs
aglet-generate/src/ftp/list_versions/: list_versions.rs  mod.rs  options.rs
aglet-generate/src/parse/: common.rs  error.rs  ftp.rs  mod.rs  ucd.rs
aglet-generate/src/progress/: data.rs  manager.rs  mod.rs  phase.rs  stats.rs
aglet-generate/src/unicode/: fetch.rs  list.rs  local.rs  mod.rs  remote.rs  use.rs  version.rs
aglet-generate/src/unicode/cache/: cached_value.rs  metadata.rs  mod.rs  phase.rs  stored_version.rs
aglet-generate/src/unicode/fetch/: mod.rs
aglet-generate/src/unicode/generate/: mod.rs  property_names.rs  property_values.rs
aglet-generate/src/unicode/remote/: download.rs  entry_meta.rs  ftp.rs  mod.rs  phase.rs  pool.rs  versions.rs
aglet-generate/src/unicode/ucd/: keys.rs  mod.rs  parse_from_file.rs  property_names.rs  property_values.rs  unicode_data.rs
aglet-ingest/: Cargo.toml
aglet-ingest/src/: lib.rs  position.rs  span.rs
aglet-pretty/: Cargo.toml
aglet-pretty/src/: ast_printer.rs  error.rs  lib.rs  span_printer.rs  token_printer.rs  writer.rs
aglet-regex/: Cargo.toml
aglet-regex/src/: error.rs  lib.rs
aglet-regex/src/lowering/: error.rs  ir.rs  lower.rs  mod.rs
aglet-regex/src/parse/: ast.rs  error.rs  input.rs  mod.rs  parse.rs  parser.rs  parser_macros.rs  pretty.rs  reader.rs  span.rs  state.rs  token.rs
aglet-regex/src/tokenize/: error.rs  input.rs  mod.rs  pretty.rs  state.rs  token.rs  tokenizer.rs
aglet-test/: Cargo.toml
aglet-test/src/: main.rs
aglet-text/: Cargo.toml
aglet-text/src/: char_group.rs  char_range.rs  cursor.rs  error.rs  lib.rs  source_map.rs  span.rs
aglet-unicode/: Cargo.toml
aglet/src/: lib.rs  main.rs
aglet/src/commands/: regex.rs
aglet/src/ingest/: error.rs  mod.rs  string.rs
aglet/src/pos/: mod.rs
