[package]
name = "aglet-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
aglet-pretty = { path = "../aglet-pretty" }
aglet-text = { path = "../aglet-text" }
syn = { version = "2.0.66", features = ["full", "extra-traits"] }
quote = "1.0.36"
proc-macro2 = "1.0.84"
proc-macro-error = "1.0.4"
