[package]
name = "aglet-generate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ag-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
colored = "2.1.0"
eyre = "0.6.12"
nom = "7.1.3"
suppaftp = { version = "5.3.1", features = ["async"] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
