[package]
name = "aglet-generate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ag-gen"
path = "src/main.rs"

[dependencies]
async_ftp = "6.0.0"
chrono = "0.4.37"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
colored = "2.1.0"
console = { version = "0.15.8", features = ["windows-console-colors"] }
eyre = "0.6.12"
indicatif = { version = "0.17.8", features = ["tokio"] }
itertools = "0.12.1"
nom = "7.1.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
sha256 = "1.5.0"
suppaftp = { version = "5.3.1", features = ["async"] }
tar = "0.4.40"
tempfile = "3.10.1"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
toml = "0.8.12"
toml-datetime-compat = { version = "0.2.0", features = ["chrono"] }
