[package]
name = "aglet-regex"
version = "0.1.0"
authors = ["Carson Myers <carson@myers.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aglet-text = { path = "../aglet-text" }
aglet-pretty = { path = "../aglet-pretty" }
eyre = { version = "0.6.5", default-features = false }
thiserror = "^1"
termcolor = "^1"