[package]
name = "aglet-regex"
version = "0.1.0"
authors = ["Carson Myers <carson@myers.se>"]
edition = "2018"

[dependencies]
aglet-text = { path = "../aglet-text" }
aglet-pretty = { path = "../aglet-pretty" }
aglet-derive = { path = "../aglet-derive" }
eyre = { version = "0.6.5", default-features = false }
thiserror = "^1"
termcolor = "^1"
colored = "2.0.0"
