[package]
name = "aglet"
version = "0.1.0"
description = "Parser generator and language building tools"
repository = "https://github.com/carsonmyers/aglet"
readme = "../README.md"
license-file = "../LICENSE.md"
keywords = ["parser", "lexer", "generator", "compiler", "grammar"]
categories = ["parsing"]
authors = ["Carson Myers <carson@myers.se>"]
workspace = ".."
edition = "2021"

[[bin]]
name = "ag"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
color-eyre = "0.6.2"
itertools = "0.12.0"
thiserror = "^1"
aglet-regex = { path = "../aglet-regex" }
aglet-text = { path = "../aglet-text" }
aglet-pretty = { path = "../aglet-pretty" }
eyre = "0.6.8"
colored = "2.0.0"
